yippe 	modified:   .env 	new file:   .vscode/settings.json 	new file:   migrations/Version20240627042949.php 	modified:   public/js/main.js 	new file:   public/uploads/011a3f48d2a0a7309dd959ea3e7a649d.ico 	new file:   public/uploads/5d3f5819160e6814890cc16bb9b598d8.gif 	modified:   src/Controller/EditController.php 	modified:   src/Controller/MainController.php 	modified:   src/Controller/RegistrationController.php 	modified:   src/Controller/ReportController.php 	modified:   src/Controller/UserController.php 	modified:   src/DataFixtures/AppFixtures.php 	modified:   src/Entity/Bug.php 	modified:   src/Form/AssignType.php 	modified:   src/Form/BugType.php 	modified:   src/Form/CommentType.php 	new file:   src/Form/StatusType.php 	modified:   src/Repository/BugRepository.php 	renamed:    src/Security/PostVoter.php -> src/Security/BugVoter.php 	modified:   src/Service/AssignService.php 	modified:   src/Service/BugService.php 	modified:   src/Service/CommentService.php 	new file:   src/Service/StatusService.php 	modified:   src/Service/UserService.php 	modified:   src/Twig/EnumExtension.php 	new file:   src/Twig/Proxy.php 	new file:   templates/bug/assign.html.twig 	modified:   templates/common/comments.html.twig 	modified:   templates/edit.html.twig 	modified:   templates/main.html.twig 	modified:   templates/registration/register.html.twig 	modified:   templates/report.html.twig 	modified:   templates/user.html.twig 	modified:   translations/messages.en.yaml 	modified:   translations/messages.pl.yaml

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -6,7 +6,7 @@ Sort by                                         : Sort by
 Date Created                                    : Date Created
 Status                                          : Status
 Details                                         : Details
-Enviroment                                      : Enviroment
+Environment                                     : Environment
 Affects versions                                : Affects versions
 Description                                     : Description
 Attachments                                     : Attachments
