--- a/translations/messages.pl.yaml
+++ b/translations/messages.pl.yaml
@@ -49,7 +49,7 @@ Date Updated: Data aktualizacji
 
 
 Affects versions: Dotyczy wersji
-Enviroment: Środowisko
+Environment: Środowisko
 Comments: Komentarze
 Reporter: Zgłosiciel
 Assigned: Przypisani
