initial 	modified:   .env 	new file:   public/css/base.css 	new file:   public/uploads/5896085ac5787af72525eead8e5213dd.png 	modified:   src/Controller/EditController.php 	modified:   src/Controller/MainController.php 	modified:   src/Form/StatusType.php 	modified:   src/Service/AssignService.php 	modified:   src/Service/UserService.php 	modified:   templates/base.html.twig 	modified:   translations/messages.en.yaml 	modified:   translations/messages.pl.yaml

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -59,3 +59,7 @@ Resolved                                        : Resolved
 Closed                                          : Closed
 in response to                                  : in response to
 Password at least 6 characters long             : Password at least 6 characters long
+This user doesn't exist                         : This user doesn't exist
+User already assigned                           : User already assigned
+Status has been changed                         : Status has been changed
+has been deleted                                : has been deleted
