--- a/translations/messages.pl.yaml
+++ b/translations/messages.pl.yaml
@@ -81,3 +81,8 @@ Add a comment...: Dodaj komentarz...
 posted at: zapostował(a) o
 User: Użytkownik
 Post: Zapostuj
+
+This user doesn't exist  : Nie ma takiego użytkownika
+User already assigned    : Użytkownik jest już przypisany
+Status has been changed  : Status został zmieniony
+has been deleted         : został usunięty
